feat(dimensions): Refactor block states, entities, and biome logic for cleaner APIs ✨
This commit introduces a major overhaul of the dimension APIs to improve consistency and extend functionality:

- **Block States**: Updated `PlatformBlockState` methods to remove nullable states and enforce stricter typing, resulting in cleaner and safer code. Updated implementations across the board.
- **Entity APIs**: Added support for entity queries like `getEntitiesWithin` and `getLivingEntitiesWithin`, ensuring better entity management in dimension simulations.
- **Biome Logic**: Tweaked mountain and hill parameters in the biome generation to improve terrain diversity and realism.
- **Dimension Registry**: Initialized global dimension descriptors and updated the plugin lifecycle for smoother dimension integration.
- **Utilities**: Introduced `FunctionCurveConverter` and `ProgressTracker` for streamlined generation workflows and better runtime monitoring.
- **Bug Fixes**: Adjusted material and block location handling to avoid null pointers during dimension interactions.

This refactor improves maintainability and paves the way for enhanced features in world generation. 🌍